Fix Font Fredoka, changes About me

--- a/ShandrewPage/Views/Home/About_Me.cshtml
+++ b/ShandrewPage/Views/Home/About_Me.cshtml
@@ -7,35 +7,43 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;600;700&display=swap" rel="stylesheet">
-<section class="m-4 presentation">
-    <div class="column p-3">
-        
-        <h3> Shandrew</h3>
-        Hi, I'm <span class="fw-bold">Shandrew</span><span> vtuber artist</span> 
-        who makes 3D models with<span> Blender</span> and <span>Unity</span> for vtubers.
-        Since June 2021, art, programming 
-        are my passion and my work. 
+<section class="m-4 text-white">
 
-    </div>
-    
-    <div class="column p-3">
-        <h3>Tools:</h3>
-        <ul>
-            <li>Vroid</li>
-            <li>Blender</li>
-            <li>Unity</li>
-            <li>Photoshop</li>
-            <li>After Effects</li>
-        </ul>
-       
-    </div>
-    <div class="column p-3">
-        <h3>Others Jobs:</h3>
-        <ul>
-            <li>Programming</li>
-            <li>Streamer</li>
-            <li>Youtuber</li>
-        </ul>
-    </div>
+    <h1 align="center"><b>Hi , I'm Shandrew </b><img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="35"></h1>
+    <p align="center">
+        <img src="https://readme-typing-svg.herokuapp.com?font=Time+New+Roman&color=cyan&size=25&center=true&vCenter=true&width=600&height=100&lines=Full+Stack+Developer..&hearts;++;Active+Learner;Love+to+learn+new+stuffs.<3,;Vtuber">
+    </p>
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img width="100%" src="https://user-images.githubusercontent.com/73097560/115834477-dbab4500-a447-11eb-908a-139a6edaec5c.gif"></a>
+
+   
+
+    <table class=" table table-bordered table-responsive text-white" align="center">
+        <td>
+            <h1>👨🏻‍💻 About Me</h1>
+
+            💡 &nbsp;I like to explore new technologies and develop software solutions and quick hacks. <br />
+            🎓 &nbsp;I'm currently studying System Engineering at the Universidad Central del Ecuador.<br />
+            ✍️ &nbsp;In my free time, I draw in digital and make content in youtube as hobbies/side hustles.<br />
+            🤡 &nbsp;Vtuber.
+
+        </td>
+        <td >
+            <br>
+            <h1 align="center">⚙️Tools:</h1>
+            <br>
+            <p align="center">
+                <a href="https://skillicons.dev">
+                    <img src="https://skillicons.dev/icons?i=blender,ps,ae,pr&perline=14" />
+
+                </a>
+            </p>
+
+            <br>
+        </td>
+        
+    </table>
+    <h2>Desing:</h2>
+    <img height="800vh" src="https://i.imgur.com/9hDh6uJ.png" />
+    <img height="800vh" src="https://imgur.com/STs2QxA.png" />
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img width="100%" src="https://user-images.githubusercontent.com/73097560/115834477-dbab4500-a447-11eb-908a-139a6edaec5c.gif"></a>
 </section>
-<div class="design m-4"><h3></h3></div>
