--- a/ShandrewPage/wwwroot/css/home.css
+++ b/ShandrewPage/wwwroot/css/home.css
@@ -1,16 +1,7 @@
 ﻿@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
-@font-face {
-    font-family: 'Roboto Black';
-    src: url(../recursos/Roboto-Black.ttf) format('woff2'), url('../recursos/Roboto-Black.ttf') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
 
-@font-face {
-    font-family: 'Roboto Regular';
-    src: url(../recursos/Roboto-Regular.ttf) format('woff2'), url('../recursos/Roboto-Regular.ttf') format('woff');
-    font-weight: normal;
-    font-style: normal;
+*{
+    font-family: 'Fredoka', sans-serif;
 }
 body {
     background-image: url(../recursos/BG.gif);
@@ -27,7 +18,7 @@ body {
 .formconctac {
     margin-top: 50px;
     display: flex;
-    font-family: 'Fredoka One',sans-serif;
+    font-family: 'Fredoka',sans-serif;
     flex-wrap: wrap;
     justify-content: center;
     align-content: center;
@@ -47,7 +38,7 @@ body {
     flex-wrap:wrap;
     align-content:center;
     margin-top:20px;
-    font-family:'Fredoka One',sans-serif;
+    font-family:'Fredoka',sans-serif;
 }
 
 .form-commision {
@@ -80,7 +71,7 @@ body {
     font-size: 1.2rem;
     color: #9298A8;
     outline: none;
-    font-family: 'Fredoka One',sans-serif;
+    font-family: 'Fredoka',sans-serif;
 }
 .email input:focus{
     color:#000000;
@@ -252,6 +243,12 @@ body {
     padding-right: 20px;
     transition: transform 0.3s ease-in-out;
     border-radius: 40px;
+    background-color: #f4f6fb;
+    text-decoration: none;
+    color: #080b10;
+    font-size: 1.5rem;
+    font-weight: 700;
+    font-family: 'Fredoka', sans-serif;
 }
 .email .button{
     margin-top:-10px;
@@ -261,19 +258,13 @@ body {
     font-size: 1.5rem;
     margin-right: 10px;
 }
-.button a {
-    text-decoration: none;
-    color: #080b10;
-    font-family: 'Fredoka One';
-    font-size: 1.5rem;
-    font-weight: 700;
-    
-}
+
 .button:hover {
     box-shadow: 1px 1px 2px #8c8c94, 0 0 5px #8c8c94, 0 0 15px #8c8c94;
     transform: scale(1.1);
+    color:black;
 }
-.frametext p a{
+.frametext p a {
     text-decoration: none;
     color: #50b2bb;
     font-weight: 700;
@@ -288,7 +279,6 @@ body {
     width: calc(1000px * 4 );
 }
 .frametext {
-    font-family: 'Fredoka One',sans-serif;
     padding-left: 100px;
     width: 50%;
     float: right;
@@ -302,7 +292,7 @@ body {
 
 .title {
     font-size: 48px;
-    font-weight: 400;
+    font-weight: bolder;
     color: #f4f6fb;
     
 }
