ADD Ilustrations Examples Changes About Me Add Ilustrations Services Card (Not Working for at moment)

--- a/ShandrewPage/Views/Home/About_Me.cshtml
+++ b/ShandrewPage/Views/Home/About_Me.cshtml
@@ -7,7 +7,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;600;700&display=swap" rel="stylesheet">
-<section class="m-4 text-white">
+<section class="m-4 text-white presentation">
 
     <h1 align="center"><b>Hi , I'm Shandrew </b><img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="35"></h1>
     <p align="center">
@@ -20,9 +20,8 @@
     <table class=" table table-bordered table-responsive text-white" align="center">
         <td>
             <h1>👨🏻‍💻 About Me</h1>
-
-            💡 &nbsp;I like to explore new technologies and develop software solutions and quick hacks. <br />
-            🎓 &nbsp;I'm currently studying System Engineering at the Universidad Central del Ecuador.<br />
+            👋 Hey! I'm an anime-style artist who makes ilustrations and Vtuber models PNG/3D for streamers and such.<br />
+            🎓 &nbsp;I'm currently studying System Engineering.<br />
             ✍️ &nbsp;In my free time, I draw in digital and make content in youtube as hobbies/side hustles.<br />
             🤡 &nbsp;Vtuber.
 
@@ -32,18 +31,21 @@
             <h1 align="center">⚙️Tools:</h1>
             <br>
             <p align="center">
-                <a href="https://skillicons.dev">
+               
                     <img src="https://skillicons.dev/icons?i=blender,ps,ae,pr&perline=14" />
-
-                </a>
+                    <img width="62" height="62" src="https://img.icons8.com/plasticine/100/vroid.png" alt="vroid" />
+                <img class="bg-white round" width="50" height="50" src="https://img.icons8.com/ios/50/clip-studio-paint.png" alt="clip-studio-paint" />
             </p>
 
             <br>
         </td>
         
     </table>
+    <div class="m-3">
     <h2>Desing:</h2>
     <img height="800vh" src="https://i.imgur.com/9hDh6uJ.png" />
     <img height="800vh" src="https://imgur.com/STs2QxA.png" />
+    </div>
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img width="100%" src="https://user-images.githubusercontent.com/73097560/115834477-dbab4500-a447-11eb-908a-139a6edaec5c.gif"></a>
+
 </section>
