--- a/ShandrewPage/Views/Portafolio/Index.cshtml
+++ b/ShandrewPage/Views/Portafolio/Index.cshtml
@@ -39,5 +39,18 @@
             </div>
         }
     </div>
+    <h2 class="text-center m-4 text-white">Ilustrations</h2>
+
+    <div class="container">
+        @foreach (var item in Model.Where(x => x.Tipo == "Dibujo"))
+        {
+            byte[]? imagenBytes = item.imagen;
+            string base64 = "data:image/png;base64," + Convert.ToBase64String(imagenBytes);
+
+            <div class="imgbox mb-5">
+                <img class="img" src="@base64">
+            </div>
+        }
+    </div>
 
 </section>
