--- a/ShandrewPage/Views/Shared/_Layout.cshtml
+++ b/ShandrewPage/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                         </li>
                         <li class="nav-item m-2">
 
-                            <a class="nav-link" asp-area="" asp-controller="Portafolio" asp-action="Index">Portafolio</a>
+                            <a class="nav-link" asp-area="" asp-controller="Portafolio" asp-action="Index">Portfolio</a>
                         </li>
                         <li class="nav-item m-2">
 
