--- a/ShandrewPage/wwwroot/css/aboutme.css
+++ b/ShandrewPage/wwwroot/css/aboutme.css
@@ -16,13 +16,7 @@ span{
     font-family: 'Fredoka', sans-serif;
 }
 .presentation {
-    display: flex;
-    flex-direction: row;
-
-    padding: 20px;
-    text-align: left;
-    font-size: 23px;
-    color: white;
+   
     background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
@@ -30,8 +24,11 @@ span{
     border: 1px solid rgba(255, 255, 255, 0.18);
     box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
 }
+.round{
+    border-radius:15px;
+}
 .column {
-    width:50%;
+    width: 50%;
     margin: 5px;
 }
 .design {
