--- a/ShandrewPage/Views/Portafolio/Index.cshtml
+++ b/ShandrewPage/Views/Portafolio/Index.cshtml
@@ -14,28 +14,33 @@
     <h2 class="text-center m-4 text-white">Vtuber Models</h2>
     <div class="container">
         @foreach (var item in Model)
-        {        
-            byte[]? imagenBytes = item.imagen;
-            string base64 = "data:image/png;base64," + Convert.ToBase64String(imagenBytes);
+        {
+
+            string image = item.ruta;
             if (item.Tipo == "Avatar")
             {
-            <div class="imgbox mb-5">
-                <img class="img" src="@base64">
-            </div>
+                <div class ="imgbox mb-5">
+                    <div class="img-container">
+                        <img class="imgsup" src="@image" />
+                        <img class="img" src="~/recursos/items.jpg"/>
+                    </div>
+                </div>
             }
         }
-   
+
     </div>
     <h2 class="text-center m-4 text-white">Props</h2>
 
     <div class="container">
         @foreach (var item in Model.Where(x => x.Tipo == "Accesorio"))
         {
-            byte[]? imagenBytes = item.imagen;
-            string base64 = "data:image/png;base64," + Convert.ToBase64String(imagenBytes);
+            string image = item.ruta;
 
             <div class="imgbox mb-5">
-                <img class="img" src="@base64">
+                <div class="img-container">
+                    <img class="imgsup" src="@image" />
+                    <img class="img" src="~/recursos/items.jpg" />
+                </div>
             </div>
         }
     </div>
@@ -44,11 +49,13 @@
     <div class="container">
         @foreach (var item in Model.Where(x => x.Tipo == "Dibujo"))
         {
-            byte[]? imagenBytes = item.imagen;
-            string base64 = "data:image/png;base64," + Convert.ToBase64String(imagenBytes);
+            string image = item.ruta;
 
             <div class="imgbox mb-5">
-                <img class="img" src="@base64">
+                <div class="img-container">
+                    <img class=" imgdib" src="@image" />
+                    
+                </div>
             </div>
         }
     </div>
