Chance Img Repositority

--- a/ShandrewPage/Views/Home/Index.cshtml
+++ b/ShandrewPage/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
     <div class="home">
         <div class="info">
             <div class="log">
-                <img class="logo img-fluid" src="~/recursos/logo.png" />
+                <img class="logo img-fluid" src="https://i.ibb.co/sJgK53D/logo.webp" />
                 <div class="redes mt-3">
                     <a href="https://twitch.tv/elshandrew" target="_blank">
                         <i class="bi bi-twitch bis"></i>
@@ -77,7 +77,7 @@
         </div>
         <div class="sandy">
 
-                <img class="shan img-fluid" src="~/recursos/police.png" />
+            <img class="shan img-fluid" src="https://i.ibb.co/Z1FmM0f/police.webp" />
 
         </div>
 
