--- a/ShandrewPage/Views/Portafolio/Index.cshtml
+++ b/ShandrewPage/Views/Portafolio/Index.cshtml
@@ -21,7 +21,7 @@
             {
                 <div class ="imgbox mb-5">
                     <div class="img-container">
-                        <img class="imgsup" src="@image" />
+                        <img class="imgsup" src="@image" alt="@item.nombre" />
                         <img class="img" src="~/recursos/items.jpg"/>
                     </div>
                 </div>
@@ -38,7 +38,7 @@
 
             <div class="imgbox mb-5">
                 <div class="img-container">
-                    <img class="imgsup" src="@image" />
+                    <img class="imgsup" src="@image" alt="@item.nombre" />
                     <img class="img" src="~/recursos/items.jpg" />
                 </div>
             </div>
@@ -53,7 +53,7 @@
 
             <div class="imgbox mb-5">
                 <div class="img-container">
-                    <img class=" imgdib" src="@image" />
+                    <img class=" imgdib" src="@image" alt="@item.nombre" />
                     
                 </div>
             </div>
