--- a/ShandrewPage/wwwroot/css/StyleSheet.css
+++ b/ShandrewPage/wwwroot/css/StyleSheet.css
@@ -11,7 +11,7 @@
     }
 
 body {
-    background: url(../recursos/BG.gif);
+    background: url(https://i.ibb.co/jbhRZ7H/bg.webp);
     font-family: 'Fredoka One',sans-serif;
 }
 
