--- a/ShandrewPage/wwwroot/css/home.css
+++ b/ShandrewPage/wwwroot/css/home.css
@@ -4,7 +4,7 @@
     font-family: 'Fredoka', sans-serif;
 }
 body {
-    background-image: url(https://raw.githubusercontent.com/andrew001s/Images/main/bg.webp?token=GHSAT0AAAAAACRXTOB3DBZQOOXT7GCFULEAZS2SYAQ);
+    background-image: url(https://i.ibb.co/jbhRZ7H/bg.webp);
     background-size: contain;
     overflow-x: hidden;
 }
