--- a/ShandrewPage/Views/Home/About_Me.cshtml
+++ b/ShandrewPage/Views/Home/About_Me.cshtml
@@ -43,8 +43,8 @@
     </table>
     <div class="m-3">
     <h2>Desing:</h2>
-    <img height="800vh" src="https://i.imgur.com/9hDh6uJ.png" />
-    <img height="800vh" src="https://imgur.com/STs2QxA.png" />
+        <img height="800vh" src="https://i.ibb.co/VCMRkYb/Ilustraci-n.webp" />
+        <img height="800vh" src="https://i.ibb.co/8gF3mJC/SandyPNG.webp" />
     </div>
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img width="100%" src="https://user-images.githubusercontent.com/73097560/115834477-dbab4500-a447-11eb-908a-139a6edaec5c.gif"></a>
 
