--- a/ShandrewPage/Views/Shared/_Layout.cshtml
+++ b/ShandrewPage/Views/Shared/_Layout.cshtml
@@ -17,51 +17,55 @@
     <link rel="stylesheet" href="~/ShandrewPage.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm ">
-            <div class="container-fluid">
+    <div>
+        <header>
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm ">
+                <div class="container-fluid">
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span><i class="bi bi-list"></i></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex  ">
-                    <ul class="navbar-nav  d-flex justify-content-evenly flex-grow-1 ">
-                        <li class="nav-item m-2 ">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item m-2">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                        <span><i class="bi bi-list"></i></span>
+                    </button>
+                    <div class="navbar-collapse collapse d-sm-inline-flex ">
+                        <ul class="navbar-nav  d-flex justify-content-evenly flex-grow-1 ">
+                            <li class="nav-item m-2 ">
+                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            </li>
+                            <li class="nav-item m-2">
 
-                            <a class="nav-link" asp-area="" asp-controller="Portafolio" asp-action="Index">Portfolio</a>
-                        </li>
-                        <li class="nav-item m-2">
+                                <a class="nav-link" asp-area="" asp-controller="Portafolio" asp-action="Index">Portfolio</a>
+                            </li>
+                            <li class="nav-item m-2">
 
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="About_Me">About Me</a>
-                        </li>
-                        <li class="nav-item m-2">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="ContactMe">Contact Me</a>
-                        </li>
-                        <li class="nav-item m-2">
-                            <a class="nav-link" asp-area="" asp-controller="Services" asp-action="Index">Services</a>
-                        </li>
-                    </ul>
+                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="About_Me">About Me</a>
+                            </li>
+                            <li class="nav-item m-2">
+                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="ContactMe">Contact Me</a>
+                            </li>
+                            <li class="nav-item m-2">
+                                <a class="nav-link" asp-area="" asp-controller="Services" asp-action="Index">Services</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-        </nav>
-    </header>
+            </nav>
+        </header>
 
-            @RenderBody()
+        @RenderBody()
 
 
-   
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
-    <footer >
-        <div class="container text-white">
-            &copy; Shandrew
-        </div>
-    </footer>
+
+        <script src="~/lib/jquery/dist/jquery.min.js"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="~/js/site.js" asp-append-version="true"></script>
+        @await RenderSectionAsync("Scripts", required: false)
+        <footer>
+            @{
+                <div class="container text-white">
+                    &copy; Shandrew - @DateTime.Now.Year
+                </div>
+            }
+        </footer>
 </body>
 </html>
+
