Añadir sección, pie de página y actualizar estilos
Se ha añadido una nueva sección con la clase `homebak container` en el archivo `Index.cshtml`, que incluye una imagen de logo.
Se ha modificado el botón de envío en el formulario de contacto en `Index.cshtml`, añadiendo la clase `m-2` para margen.
Se ha añadido un pie de página en el archivo `_Layout.cshtml` que incluye enlaces a varias redes sociales con sus respectivos iconos.
Se ha cambiado la imagen de fondo en el archivo `_Layout.cshtml.css` a una nueva URL.
Se ha actualizado el archivo `home.css` para ajustar la imagen de fondo, asegurando que se repita sin interrupciones, se ajuste a la pantalla y se centre. También se han ajustado los márgenes y la alineación del formulario de contacto.

--- a/ShandrewPage/Views/Home/Index.cshtml
+++ b/ShandrewPage/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap" rel="stylesheet"
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="~/js/sweetalert.js"></script>
+
 <section class="homebak container">
     <div class="home">
         <div class="info">
@@ -177,7 +178,7 @@
            
         </div>
         <div class="email">
-            <input class="button" type="submit" value="Send" id="btn" />
+            <input class="button m-2" type="submit" value="Send" id="btn" />
         </div>
         
     </form>
