--- a/ShandrewPage/Views/Shared/_Layout.cshtml
+++ b/ShandrewPage/Views/Shared/_Layout.cshtml
@@ -60,8 +60,40 @@
         <script src="~/js/site.js" asp-append-version="true"></script>
         @await RenderSectionAsync("Scripts", required: false)
         <footer>
+
             @{
+                <div class=" d-flex flex-row justify-content-center ">
+                    <a href="https://www.facebook.com/Shandrewvt" target="_blank">
+                        <i class="bi bi-facebook"></i>
+                    </a>
+                    <a href="https://www.twitch.tv/elshandrew" target="_blank">
+                        <i class="bi bi-twitch"></i>
+                    </a>
+                    <a href="https://www.tiktok.com/@@elshandrew" target="_blank">
+                        <i class="bi bi-tiktok"></i>
+                    </a>
+                    <a href="https://www.instagram.com/elshandrew/">
+                        <i class="bi bi-instagram"></i>
+                    </a>
+                    <a href="https://twitter.com/elshandrew" target="_blank">
+                        <i class="bi bi-twitter"></i>
+                    </a>
+                    <a href="https://www.youtube.com/channel/UCjxyFoqzFm45CJmOB6ANqiA"
+                       target="_blank">
+                        <i class="bi bi-youtube"></i>
+                    </a>
+                    <a href="https://discord.com/invite/KtCBAfneRy" target="_blank">
+                        <i class="bi bi-discord"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/andr%C3%A9s-rom%C3%A1n/" target="_blank">
+                        <i class="bi bi-linkedin"></i>
+                    </a>
+                    <a href="https://github.com/andrew001s" target="_blank">
+                        <i class="bi bi-github"></i></a>
+                </div>
                 <div class="container text-white">
+
+
                     &copy; Shandrew - @DateTime.Now.Year
                 </div>
             }
